--- a/views/nueva.jade
+++ b/views/nueva.jade
@@ -1,165 +1,104 @@
-extends layout
+extends map-layout
+// block link
+block link
+	link(rel="stylesheet" href='//cdnjs.cloudflare.com/ajax/libs/dropzone/3.8.4/css/dropzone.css')
+	link(rel="stylesheet" href="https://raw.githubusercontent.com/maxwells/bootstrap-tags/master/dist/css/bootstrap-tags.css")
+	style.
+		.bootstrap-tagsinput {
+		    width: 100%;
+		}
+		.label {
+		    line-height: 2 !important;
+		}
+	// CSS DROPZONE
+// Botones mapa
+block botonesmapa
+	button#dibujar.btn.btn-small.btn-info.btn-map(type='button', style='position: absolute; right: 0.5em; bottom: 40%; min-width: 1.375em')
+		i.fa.fa-pencil
+	button#rellenar.btn.btn-small.btn-info.btn-map.cd-btn(type='button', style='position: absolute; right: 0.5em; bottom: 50%; min-width: 1.375em')
+		i.fa.fa-list-alt
+	#menu-dibujar
+		button#eliminar.btn.btn-small.btn-warning.btn-map(type='button', style='position: absolute; right: 4.3em; bottom: 50%; min-width: 1.375em')
+			i.fa.fa-trash
+		button#editar.btn.btn-small.btn-warning.btn-map(type='button', style='position: absolute; right: 4.3em; bottom: 40%; min-width: 1.375em')
+			i.fa.fa-pencil-square-o
+		button#punto.btn.btn-small.btn-warning.btn-map(type='button', style='position: absolute; right: 4.3em; bottom: 30%; min-width: 1.375em')
+			img.img-responsive(src="http://www.fontsaddict.com/images/icons/png/15253.png" style="max-width: 1.375em; min-width: 1.375em; max-height: 1em")
+		button#linea.btn.btn-small.btn-warning.btn-map(type='button', style='position: absolute; right: 4.3em; bottom: 20%; min-width: 1.375em')
+			img.img-responsive(src="http://www.clker.com/cliparts/3/d/6/b/11949947211019452702polyline.svg.hi.png" style="max-width: 1.375em; min-width: 1.375em; max-height: 1em")
+		button#poligono.btn.btn-small.btn-warning.btn-map(type='button', style='position: absolute; right: 4.3em; bottom: 10%; min-width: 1.375em')
+			img.img-responsive(src="http://uxrepo.com/static/icon-sets/windows/svg/vector-polygon.svg" style="max-width: 1.375em; min-width: 1.375em; max-height: 1em")
+// Panel lateral - rellenar denuncia
+block panel-lateral
+	.cd-panel.from-right
+		header.cd-panel-header
+			h1(style="margin-top: 2%; color: #55ACEE !important; font-size: 20px;") NUEVA DENUNCIA
+			a.cd-panel-close(href='#0') Close
+		.cd-panel-container
+			.cd-panel-content 
+				form.form-horizontal
+					.input-group(style={'margin-top':'5px'})
+						span.input-group-addon Título
+						input#titulo.form-control.btn-default(type='text', name="titulo", placeholder='Añade un título')
+					.space
+					h4 Añade una descripción
+					textarea#contenido(name="contenido" rows='3' style={'height':'300px'}).form-control
+					.space
+					h4 Imágenes
+					div(id="file-dropzone" style={background:'#55ACEE', border:'1px dashed'})
+						.dz-message.text-center(style={color:'#fff'}) Arrastra imágenes o haz click aquí.
+					.space
+					h4 Tags
+					.col-lg-12.form-control.btn-default(id="tags" type="text" name="tags" placeholder="Introduce tags" data-role="tagsinput")
+					.space
+					.col-lg-12
+						.input-group(style={'margin-top':'5px', 'margin-bottom':'15px'})
+							span.input-group-addon
+								i.fa.fa-send.fa-fw
+							input#submitDenuncia.form-control.btn-success(type="button", value="Denunciar")
+// block script
 block script
 	script.
-		var tags=[];
-	script(src='/javascripts/tags.js')
-	// AÑADIR TAGS
-	link(rel="stylesheet" href='//cdnjs.cloudflare.com/ajax/libs/dropzone/3.8.4/css/dropzone.css')
-	// CSS DROPZONE
+		var tagElement;
+	// TAGS
+	script(src="https://raw.githubusercontent.com/maxwells/bootstrap-tags/master/dist/js/bootstrap-tags.min.js")
+	// TinyMCE Editor
+	script(src="//cdn.tinymce.com/4/tinymce.min.js")
 	script(src='http://cdnjs.cloudflare.com/ajax/libs/dropzone/3.8.4/dropzone.min.js')
 	// JS DROPZONE
-	link(href="/stylesheets/form.css" rel="stylesheet")
-	//CSS Formulario nueva denuncia / editar denuncia
-	script(src="https://cdn.socket.io/socket.io-1.3.7.js")
-	// SOCKET.IO
-	link(rel="stylesheet" href="/javascripts/openlayers/ol3/ol.css" type="text/css")
-	// OPENLAYERS 3.11.1 CSS
-	script(src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.12/proj4.js")
-	// PROJ4JS
-	script(src="/javascripts/openlayers/ol3/ol.js")
-	// OPENLAYERS 3.11.1 JS
-	link(rel="stylesheet" href="/javascripts/openlayers/ol3-layerswitcher/src/ol3-layerswitcher.css")
-	// OPENLAYERS LAYERSWITCHER CSS
-	script(src="/javascripts/openlayers/ol3-layerswitcher/src/ol3-layerswitcher.js")
-	// OPENLAYERS LAYERSWITCHER CSS
-	script(src="/javascripts/openlayers/style.js")
-	script(src="/javascripts/openlayers/proj.js")
-	script(src="/javascripts/openlayers/capas.js")
-	script(src="/javascripts/openlayers/olnueva.js")
-	// JS CONFIG MAPA
 	script(src="/javascripts/upload.js")
+	// INTERACCIONES MAPA DIBUJAR ...
+	script(src="/javascripts/openlayers/olnueva.js")
 	// JS CONFIG SUBIR IMÁGENES
 	script(type="text/javascript").
 		$(function(){
-		
-		    $('.btn-submit').on('click', function(e) {
-		        var formname = $(this).attr('name'); 
-		        var tabname = $(this).attr('href');
-		        e.preventDefault();
-		        if ($('#' + formname)[0].checkValidity()) { /* Only works in Firefox/Chrome need polyfill for IE9, Safari. http://afarkas.github.io/webshim/demos/ */
-		            $('ul.nav li a[href="' + tabname + '"]').parent().removeClass('disabled');
-		            $('ul.nav li a[href="' + tabname + '"]').trigger('click');
-		           	if(tabname=='#mapa')
-		            	setTimeout(showMap, 500);
-		        }
+			// TAGS
+			tagElement = $('#tags').tags({
+		        suggestions:["basura", "malOlor"],
+		        excludeList:[" ", "#", "words"]
 		    });
-		    
-		   	$('ul.nav li').on('click', function(e) {
-		        if ($(this).hasClass('disabled')) {
-		            e.preventDefault();
-		            return false;
-		        }
-		    });
+			// Inicio del plugin wyswyg tinymce Editor
+			tinymce.init({
+				selector: 'textarea',
+				plugins: ['advlist autolink link lists charmap print preview hr anchor pagebreak',
+				'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
+				'save table contextmenu directionality emoticons template paste textcolor'],
+				theme: 'modern',
+				language_url: '/langs/es.js',
+				min_width: 300,
+				resize: false
+			});
+			
+			// Mostrar menú rellenar denuncia al iniciar
+			$('.cd-btn').trigger('click');
+			
+			// Mostrar menú dibujar geometría
+			$('#menu-dibujar').slideUp();
+			$('#dibujar').click(function(event){
+				if($('#menu-dibujar').css('display') != 'none'){
+					$('#menu-dibujar').slideUp();
+				}
+				else $('#menu-dibujar').slideDown();
+			});
 		
 		});
-		
-block content
-	div.page-header
-		h1 Nueva denuncia 
-			small(style={float:'right'}) formulario para añadir nueva denuncia
-	br
-	p En este apartado podrás añadir una nueva denuncia. Es importante que tengas en
-		| cuenta los siguientes puntos: 
-	ol
-		li Explica con claridad el motivo de tu denuncia. 
-		li Trata de proporcionar la mayor información posible.
-		li Porporciona la localización correcta.
-		li Añade TAGS que identifiquen el tipo de denuncia.
-		li Añade información visual.
-	.board
-		.board-inner
-			ul#myTab.nav.nav-tabs
-				.liner
-				li.active
-					a(href='#general', data-toggle='tab', data-content='Título y Descripción', title='Información Básica')
-						span.round-tabs.one
-							i.glyphicon.glyphicon-pencil
-				li.disabled
-					a(href='#mapa', data-toggle='tab', data-content='Geometría de la denuncia', title='Información Geográfica')
-						span.round-tabs.two
-							i.glyphicon.glyphicon-globe
-				li.disabled
-					a(href='#etiquetas', data-toggle='tab', data-content='Tags informativos', title='Etiquetas')
-						span.round-tabs.three
-							i.glyphicon.glyphicon-tags
-				li.disabled
-					a(href='#fotos', data-toggle='tab', data-content='Imágenes', title='Inormación Visual')
-						span.round-tabs.four
-							i.glyphicon.glyphicon-picture
-				li.disabled
-					a(href='#confirmar', data-toggle='tab', data-content='Confirma tu denuncia', title='Confirmar')
-						span.round-tabs.five
-							i.glyphicon.glyphicon-ok
-		.tab-content(style={'min-height':'500px', 'background':'#f7f7f7', 'padding':'15px'})
-			#general.tab-pane.fade.in.active
-				h3.narrow.text-center Información Básica
-				p.narrow.text-center Debes explicar con claridad la información de tu denuncia.
-				form#home_form.form-horizontal.text-center
-					fieldset
-						button.btn-submit.btn.btn-success.btn-outline-rounded.green(type='submit', href='#mapa' name='home_form') Continuar
-							span.glyphicon.glyphicon-check(style='margin-left:10px;')
-				form#basico
-					div.input-group
-						span.input-group-addon Título
-						input#inTitulo(type="text", name="titulo" placeholder="Añade un título").form-control
-					br
-					div(style={'border-radius':'0px'}).well
-						h4 Añade una descripción
-						form
-							.form-group
-								textarea#taDescripcion(name="descripcion" rows='3' style={'height':'300px'}).form-control
-			#mapa.tab-pane.fade
-				h3.narrow.text-center Información Geográfica
-				p.narrow.text-center Debes seleccionar con exactitud la posición de la denuncia.
-				form#home_form.form-horizontal.text-center(name='home_form', role='form')
-					fieldset
-						button.btn-submit.btn.btn-success.btn-outline-rounded.green(type='submit', href='#etiquetas', name='home_form') Continuar
-							span.glyphicon.glyphicon-check(style='margin-left:10px;')
-				div#map(style={'height':'450px'})
-					div#menuControl(style={width:'40%','position':'absolute', bottom:'10px', left:'0',right:'0',margin:'0 auto', 'z-index':'2'})
-						div.btn-group(display:'inline-block','data-toggle'='buttons' style={width:'100%',left:'0',right:'0',margin:'0 auto'}).box-shadow--6dp
-							label#pan.btn.btn-warning(style={width:'16.66%',margin:'0 auto'})
-								input(type="radio")
-								span.fa.fa-map(style={'font-size':'16px', color:'#000'})
-							label#editar.btn.btn-warning(style={width:'16.6666666%',margin:'0 auto'})
-								input(type="radio")
-								span.fa.fa-edit(style={'font-size':'16px', color:'#000'})
-							label#eliminar.btn.btn-warning(style={width:'16.6666666%',margin:'0 auto'})
-								input(type="radio")
-								span.fa.fa-trash(style={'font-size':'16px', color:'#000'})
-							label#punto.btn.btn-warning(style={width:'16.6666666%',margin:'0 auto'})
-								input(type="radio") 
-								div(style={background:'url("https://cdn1.iconfinder.com/data/icons/mirrored-twins-icon-set-hollow/512/PixelKit_point_marker_icon.png")','background-size':'contain', 'background-repeat':'no-repeat',height:'20px', 'background-position':'center'})
-							label#linea.btn.btn-warning(style={width:'16.6666666%',margin:'0 auto'})
-								input(type="radio")
-								div(style={background:'url("http://icons.iconarchive.com/icons/icons8/android/512/Maps-Polyline-icon.png")','background-size':'contain', 'background-repeat':'no-repeat',height:'20px', 'background-position':'center'})
-							label#poligono.btn.btn-warning(style={width:'16.6666666%',margin:'0 auto'})
-								input(type="radio") 
-								div(style={background:'url("http://icons.iconarchive.com/icons/icons8/android/512/Maps-Polygon-icon.png")','background-size':'contain', 'background-repeat':'no-repeat',height:'20px', 'background-position':'center'})
-			#etiquetas.tab-pane.fade
-				h3.narrow.text-center Etiquetas
-				p.narrow.text-center Añade etiquetas que identifiquen la denuncia.
-				form#home_form.form-horizontal.text-center(name='home_form', role='form')
-					fieldset
-						button.btn-submit.btn.btn-success.btn-outline-rounded.green(type='submit', href='#fotos', name='home_form') Continuar
-							span.glyphicon.glyphicon-check(style='margin-left:10px;')
-				form#et.form-horizontal.text-center
-					div#ig1.input-group
-						span#b1.btn.btn-success.input-group-addon.add-more +
-						input(autocomplete="off" class="form-control" id="field1" name="prof1" type="text" placeholder="Añade una etiquesta (5 - 15 caracteres)" data-items="8").form-control
-			#fotos.tab-pane.fade
-				h3.narrow.text-center Información Visual
-				p.narrow.text-center Este apartado es opcional, aunque recomendable.
-				form#home_form.form-horizontal.text-center(name='home_form', role='form').text-center
-					fieldset
-						button.btn-submit.btn.btn-success.btn-outline-rounded.green(type='submit', href='#confirmar', name='home_form') Continuar
-							span.glyphicon.glyphicon-check(style='margin-left:10px;')
-				h4 Selecciona imágenes y súbelas
-				form(id="file-dropzone" style={background:'#ffbb00', border:'1px dashed'})
-					.dz-message.text-center(style={color:'#00bbff'}) Arrastra imágenes o haz click aquí.
-			#confirmar.tab-pane.fade
-				form#submitDenuncia.form-horizontal.text-center(name='submit', role='form' action="/" method= "POST")
-					fieldset
-						button#idbuttonSubmit.btn.btn-success.btn-outline-rounded.green(type='submit', name='submit') Finalizar
-							span.glyphicon.glyphicon-send(style='margin-left:10px;')
-		hr
