--- a/public/javascripts/plugins/ol3-layerswitcher/src/ol3-layerswitcher.css
+++ b/public/javascripts/plugins/ol3-layerswitcher/src/ol3-layerswitcher.css
@@ -1,3 +1,11 @@
+ul {
+	list-style: none;
+}
+
+label {
+	margin-left: 5px;
+}
+
 .layer-switcher {
     position: absolute;
     top: 3.5em;
@@ -33,16 +41,22 @@
 }
 
 .layer-switcher ul {
-    padding-left: 1em;
+    padding-left: 40px;
     list-style: none;
 }
+
 
 .layer-switcher li.group {
     padding-top: 5px;
 }
 
-.layer-switcher li.group > label {
+li.group > ul {
+	padding-right: 40px;
+}
+
+.group > label {
     font-weight: bold;
+    color: #55ACEE !important;
 }
 
 .layer-switcher input {
