--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,269 +1,142 @@
-doctype 
 html
-	head
-		block meta
-		//the viewport is important for mobile devices
-		meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-		title= title
-		link(rel='stylesheet' href='/stylesheets/carousel.css')
-		link(rel='stylesheet', href='/stylesheets/bootstrap-social.css')
-		// bootstrap social
-		link(rel='stylesheet', href='https://bootswatch.com/united/bootstrap.min.css')
-		//boptstrap theme
-		link(rel='stylesheet', href='/stylesheets/style.css')
-		// estilos
-		//link(rel='stylesheet', href='/stylesheets/noJS.css')
-		link(rel='stylesheet', href='/foundation-icons/foundation-icons.css')
-		// foundation icon
-		script(src='//cdn.tinymce.com/4/tinymce.min.js')
-		
-		link(rel='stylesheet', href='/stylesheets/profile-menu.css')
+  head
+    meta(charset='utf-8')
+    // Para dispositivos móviles
+    meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
+    // Bootstrap CSS
+    link(href='/stylesheets/bootstrap/css/bootstrap.css', rel='stylesheet')
+    // Font Awesome Iconos
+    link(rel='stylesheet', href='/stylesheets/font-awesome/css/font-awesome.css')
+    // Fuentes
+    link(href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Raleway:700,400,300', rel='stylesheet', type='text/css')
+    // CSS Principal
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    // CSS Animaciones
+    link(rel='stylesheet', href='/stylesheets/animations.css')
+    // Highlight CSS
+    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css')
+    // Bootstrap Select CSS
+    link(rel='stylesheet', href='/javascripts/plugins/bootstrap-select/dist/css/bootstrap-select.css')
+    // Prefix free
+    script(src='https://raw.githubusercontent.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js')
+  body.no-trans
+    // header start
+    // ================
+    header.header.fixed.clearfix.navbar.navbar-fixed-top
+      .container
+        .row
+          .col-md-4
+            // header-left start
+            // ================
+            .header-left.clearfix
+              // logo
+              .logo.smooth-scroll
+                a(href='#banner')
+                  span.fa-stack.fa-lg
+                    i.fa.fa-circle.fa-stack-2x
+                    i.fa.fa-bullhorn.fa-stack-1x.fa-inverse
+              // name-and-slogan
+              .site-name-and-slogan.smooth-scroll
+                .site-name
+                  a(href='/') Informa Torrent
+                .site-slogan Tu portal de denuncias
+            // header-left end
+          .col-md-8
+            // header-right start
+            // ================
+            .header-right.clearfix
+              // main-navigation start
+              // ================
+              .main-navigation.animated
+                // navbar start
+                // ================
+                nav.navbar.navbar-default(role='navigation')
+                  .container-fluid
+                    // Toggle get grouped for better mobile display
+                    .navbar-header
+                      button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-collapse-1')
+                        span.sr-only Abrir Menú
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    // Collect the nav links, forms, and other content for toggling
+                    #navbar-collapse-1.collapse.navbar-collapse.scrollspy.smooth-scroll
+                      ul.nav.navbar-nav.navbar-right
+                        li.active
+                          a(href='/app/#banner') Inicio
+                        if(!user)
+                          li
+                            a(href="/app/#iniciar") Iniciar Sesión
+                          li
+                            a(href='/app/#registrarse') Registrarse
+                          li
+                            a(href='/app/#olvidaste') ¿Olvidaste contraseña?
+                // navbar end
+              // main-navigation end
+            // header-right end
+    // header end
+    // banner start
+    // ================
+    #banner.banner(style="background: url('https://images.unsplash.com/photo-1445964047600-cdbdb873673d?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1800&fit=max&s=e590407728cc89ef57f248ebec481dd5'); background-size: cover; background-position: center center; background-repeat: no-repeat")
+      .banner-image
+      .banner-caption
+        .container
+          .row
+            .col-md-8.col-md-offset-2.object-non-visible(data-animation-effect='rollIn')
+              h1.text-center
+                | Informa 
+                span Torrent
+              p.lead.text-center
+                | ......
+    // banner end
 
-		link(href="http://fonts.googleapis.com/css?family=Average|Courgette" rel="stylesheet" type="text/css")
-		script(type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
-		script(type="text/javascript" src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
-
-		script(type='text/javascript' src='/javascripts/bootstrap-dialog.js')
-		script(type='text/javascript' src='/javascripts/particulas.js')
-		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.5/css/bootstrap-dialog.min.css')
-
-		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
-		script(src="https://cdn.socket.io/socket.io-1.3.7.js")
-		// SOCKET.IO
-		//
-		script.
-			var ip = '#{ip}';
-			alert(ip);
-			alert(#{numdenun});
-			var num_denuncias_io = io.connect("http://" + ip + ":3000/app/visor");
-			
-			num_denuncias_io.emit('get_num_usuarios');
-			
-			num_denuncias_io.on('num_usuarios_conectados', function(data){
-				alert(data.num_usuarios);
-			});
-
-			num_denuncias_io.on('denuncia_cerca', function(data){
-				alert('data denuncia: ' + JSON.stringify(data.denuncia) + 
-					  'from: ' + JSON.stringify(data.from));
-			});
-			
-			num_denuncias_io.on('denuncia_comentada', function(data){
-				alert('data denuncia: ' + JSON.stringify(data.denuncia) + 
-					  'from: ' + JSON.stringify(data.from));
-			});
-			
-			num_denuncias_io.on('connect', function(socket){
-				console.log('#{id_usuario}');
-				if('#{id_usuario}' != 'undefined')
-					num_denuncias_io.emit('get_id_usuario', {id_usuario: '#{id_usuario}'});
-			});
-			
-			num_denuncias_io.on('new_denuncia', function(data){
-				 var num = parseInt($('#numdenun').text());
-				 $('#numdenun').empty();
-				$('#numdenun').text(num + 1);
-			});
-			
-			$(function(){
-				$('#numdenun').hide();
-				$('[data-toggle="tab"]').popover({
-				    trigger: 'hover',
-				    'placement': 'top'
-				});
-			
-			
-			
-				// Para que no se cierre el menú de inicio
-				$('.dropdown').on('hide.bs.dropdown', function () {
-				    return false;
-				});
-				
-				$('#sign').on('mouseover',function(){
-					$('.dropdown').addClass('open');
-					//foo = true;
-				}).on('mouseout', function(e){
-					if($(e.target).is('input')){
-						$('.dropdown').addClass('open');
-						//alert('fooo');
-					}
-					else {
-						//alert('baaar');
-						$('.dropdown').removeClass('open');
-						//foo = false;
-					}
-				});
-				
-				//
-				var aux = false;
-				function addClass(){
-					$('#numdenun').show();
-					$('#menuapp').addClass('goToTop');
-					$('.navbar-brand, .navbar-nav > li >  a').addClass('goToTop2');
-					$('.top-shadow').css({'display':'block'});
-					if(!aux){
-						$('.navbar-brand').fadeOut(500, function(){
-							$(this).html("<i style='color:#ffbb00;font-size:65px;' class='fa fa-bullhorn'/>"+
-							"  <i style='color:#00bbff;font-size:65px' class='fa fa-exclamation'/>").fadeIn(500);
-						});
-						aux = true;
-					}
-				}
-				function removeClass(){
-					$('#numdenun').hide();
-					$('#menuapp').removeClass('goToTop');
-					$('.navbar-brand, .navbar-nav > li > a').removeClass('goToTop2');
-					$('.top-shadow').css({'display':'none'});
-					if(aux){
-						$('.navbar-brand').fadeOut(0, function(){
-							$(this).html("informaTorrent!").fadeIn(500);
-						});
-						aux = false;
-					}
-				}
-				// NAVBAR
-				var navHeight = $("#imgheader").height();
-				($(window).scrollTop() > navHeight) ? addClass() : removeClass();
-				// Cuando accedemos desde url#scroll
-				$(window).bind('scroll', function() {
-					var navHeight = $("#imgheader").height();
-					($(window).scrollTop() > navHeight) ? addClass() : removeClass();
-				});
-			
-				//TEXTAREA WYSIWYG EDITOR
-				tinymce.init({
-					selector: 'textarea',
-					plugins: ['advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker',
-					'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
-					'save table contextmenu directionality emoticons template paste textcolor'],
-					theme: 'modern',
-					language_url: '/langs/es.js',
-					min_width: 300,
-					resize: false
-				});
-			
-			
-				if('#{message}' != undefined)
-				{
-					//alert('#{message}');
-					msg_error = '#{message.error}';
-					msg_success = '#{message.success}';
-					msg_info = '#{message.info}';
-					//alert(msg_error + msg_success + msg_info);
-					if(msg_error || msg_success || msg_info)
-					{
-						var type = undefined;
-						var title = '';
-						var msg = '';
-						
-						if (msg_error){
-							title = 'Error';
-							type = BootstrapDialog.TYPE_DANGER;
-							msg = msg_error;
-						}
-						if (msg_success){ 
-							title = 'Completado';
-							type = BootstrapDialog.TYPE_SUCCESS;
-							msg = msg_success;
-						}
-						if (msg_info){ 
-							title = 'Info';
-							type = BootstrapDialog.TYPE_INFO;
-							msg = msg_info;
-						}
-						if (type)
-							BootstrapDialog.show({
-								type: type,
-								title: title,
-								message: msg,
-								buttons: [{
-								label: 'Cerrar',
-								action: function(dialog){dialog.close()}
-								}]
-							}); 			
-					}
-				}
-			});
-
-		block script
-	body(style={'background':'#fff'})
-		div#fb-root 
-		// SDK Facebook
-		script(src="/javascripts/share.js" type="text/javascript") 
-		header#myCarousel.carousel.slide(style={height: '35%'})
-			ol.carousel-indicators
-				li.active(data-target='#myCarousel', data-slide-to='0')
-				li(data-target='#myCarousel', data-slide-to='1')
-				li(data-target='#myCarousel', data-slide-to='2')
-			.carousel-inner
-				.item.active
-					.fill(style="background-image:url('http://torrentaldia.com/wp-content/uploads/2014/03/MG_7829b.jpg');")
-					.carousel-caption
-						h2 BIENVENIDO AL GEOPORTAL DE TORRENT
-				.item
-					.fill(style="background-image:url('http://torrentaldia.com/wp-content/uploads/2014/03/MG_7829b.jpg');")
-					.carousel-caption
-						h2 DESCARGA CARTOGRAFÍA
-				.item
-					.fill(style="background-image:url('http://torrentaldia.com/wp-content/uploads/2014/03/MG_7829b.jpg');")
-					.carousel-caption
-						h2 DESCARGA CARTOGRAFÍA
-			a.left.carousel-control(href='#myCarousel', data-slide='prev')
-				span.icon-prev(style={'font-size': '80px'})
-			a.right.carousel-control(href='#myCarousel', data-slide='next')
-				span.icon-next(style={'font-size': '80px'})
-				
-		include ./includes/menuapp.jade
-		div.top-shadow
-		
-		div(style={position:'fixed', 'z-index':'999',top:'100px', left:'90%', right:'10px'})
-			.col-lg-12(style={background:'rgba(200,50,0,0.3)', color:'#fff'}).text-center Nº DENUNCIAS
-			div.col-lg-12(id="numdenun" style={background:'rgba(200,50,0,0.3)', color:'#fff'}).text-center= numdenun
-					
-		div.container-fluid(style={padding:'0px'})
-			div#scroll(style={height:'73px', background:'rgba(200,50,0,0.3)',display:'flex'})
-				div(style={float:'left', position:'absolute', 'margin':'1px 0px 0px 15px'})
-					i.fa.fa-bullhorn(style={color:'#ffbb00','font-size':'65px', 'float':'left',position:'relative', top:'0px'})
-					h1(style={margin:'0px','float':'left', position:'relative', top:'8px', color: '#fff'}) informaTorrent
-					i.fa.fa-exclamation(style={color:'#00bbff','font-size':'65px','float':'left',position:'relative', top:'0px'})
-				div(style={height:'10px',width:'100%', background:'rgba(255,187,0,0.3)', 'align-self':'flex-end',margin:'0px'})
-			
-			div(class="container-fluid" style={'padding-left':'0px', 'padding-right':'0px'})
-				div(class="grid-block-container" style="position: fixed; width: 100%; height: 100%; bottom: 0px; z-index: -1")
-				div(style="position: relative; width: 80%; margin: 0 auto;")
-					block content
-					div(class="top-shadow-no-fixed container" id="blur" style="border-top-left-radius: 20px; border-top-right-radius: 20px; width: 100%; position: absolute;background: linear-gradient(180deg, rgba(255,255,255,0.3), rgba(255,255,255,0.1), rgba(255,255,255,0.3)),url('https://photosbybishop.files.wordpress.com/2013/06/jbd_4266.jpg'); background-size: 100% 100%; min-height: 500px;")
-					include ./includes/particulas.jade
-					div(class="col-lg-4" style={'margin-top':'75px !important'})
-						div(class="centerCol" style="align-self: center; background: rgba(200,50, 0, 0.5);border-radius: 4px; padding: 10px;min-height:350px;")
-							div(class="centerRow")
-								img(data-toggle="tab" data-content="OGC" style="width: 23%; padding: 1%;" src="http://www.virtualcitysystems.de/images/vcs/OGC_Logo.png")
-								img(data-toggle="tab" data-content="INSPIRE" style="width: 23%; padding: 1%;" src="http://www.linkvit.eu/wp-content/uploads/2014/10/inbspire.png")
-								img(data-toggle="tab" data-content="IGN" style="width: 23%; padding: 1%;" src="http://www.ign.es/ign/img/guiaNavegacion/Banner_insti_IGN.png")
-								img(data-toggle="tab" data-content="UPV" style="width: 23%; padding: 1%;" src="http://www.damres.webs.upv.es/portada/LogoUPV.png")
-		
-							div(class="centerRow")
-								img(data-toggle="tab" data-content="ETSIGCT" style="width: 23%; padding: 1%; clear: both;" src="http://jllerma.webs.upv.es/esc-gct.gif")
-								img(data-toggle="tab" data-content="Node JS" style="width: 23%; padding: 1%; clear: both;" src="http://code-maven.com/img/node.png")
-								img(data-toggle="tab" data-content="PostgreSQL" style="width: 23%; padding: 1%; clear: both;" src="http://3.bp.blogspot.com/-H9Vx0ecAx_E/U6xfwVosNqI/AAAAAAAAAe4/QNCuwOf50HI/s1600/postgresql_logo-555px.png")
-								img(data-toggle="tab" data-content="PostGIS" style="width: 23%; padding: 1%; clear: both;" src="http://boundlessgeo.com/wp-content/uploads/2015/10/post-gis.png")
-		
-							div(class="centerRow")
-								img(data-toggle="tab" data-content="HTML5, CSS3, JS5" style="width: 46%; padding: 1%; clear: both;" src="http://www.murciastudio.es/wp-content/uploads/2015/01/languages.png")
-								img(data-toggle="tab" data-content="GEOSERVER" style="width: 23%; padding: 1%; clear: both;" src="http://boundlessgeo.com/wp-content/uploads/2012/10/GeoServer_Icon1.png")
-								img(data-toggle="tab" data-content="BOOTSTRAP" style="width: 23%; padding: 1%; clear: both;" src="http://www.brucehan.me/img/10.Bootstrap.png")
-		
-							div(class="centerRow")
-								img(data-toggle="tab" data-content="SOCKET.IO" style="width: 46%; padding: 1%; clear: both;" src="http://www.cnydev.org/wp-content/uploads/2015/03/socketio2.png")
-								img(data-toggle="tab" data-content="OPENLAYERS 3" style="width: 23%; padding: 1%; clear: both;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/OpenLayers_logo.svg/2000px-OpenLayers_logo.svg.png")
-					
-					div(class="col-lg-4" style={'margin-top':'75px !important'})
-						div(style="background: rgba(200,50, 0, 0.5);border-radius: 4px;padding: 10px;min-height:350px;" class="centerCol")
-							p(style="text-align: center; color: #fff") Proyecto de IDE, Geoportal y aplicación de denuncias para el ayuntamiento de Torrent.
-							p(style="text-align: center; color: #fff") Desarrollado por Jose Ángel Hermosilla Rodrigo como Trabajo de Fin de Grado.
-							p(style="text-align: center; color: #fff") Universidad Politécnica de Valencia
-							p(style="text-align: center; color: #fff") Escuela Técnica Superior de Ingeniería en Geomática y Topografía
-							p(style="text-align: center; color: #fff") &copy; Todos los derechos reservados. (2015 - 2016)
-				
-					div(class="col-lg-4" style={'margin-top':'75px !important'})
-						div(style="background: rgba(200,50, 0, 0.5);border-radius: 4px;padding: 10px;min-height:350px;" class="centerCol")
+    // Contenido
+    // ================
+    block content
+    script.
+      var ip = '#{ip}';
+      var message = {};
+      if ('#{message.error}' != '') {
+        message.type = 'type-error';
+        message.msg = '#{message.error}';
+      }
+      else if ('#{message.success}' != '') {
+        message.type = 'type-success';
+        message.msg = '#{message.success}';
+      }
+      else if ('#{message.info}' != '') {
+        message.type = 'type-info';
+        message.msg = '#{message.info}';
+      }
+      else message.type = 'undefined';
+    // Plugins Javascript situados al final de la página, así el contenido carga antes
+    // JQuery y Bootstrap
+    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
+    // Modernizr
+    script(type='text/javascript', src='/javascripts/plugins/modernizr.js')
+    // Jquery appear
+    script(type='text/javascript', src='/javascripts/plugins/jquery.appear.js')
+    // JS Principal
+    script(type='text/javascript', src='/javascripts/template.js')
+    // FitText.js
+    script(type='text/javascript', src='/javascripts/plugins/jquery.fittext.js')
+    // Bootstrap Dialog JS (Nakupanda)
+    script(type='text/javascript', src='/javascripts/plugins/bootstrap-dialog.js')
+    // Highlight JS
+    script(src='//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js')
+    // Bootstrap Select JS
+    script(src='/javascripts/plugins/bootstrap-select/js/bootstrap-select.js')
+    // Mensajes del servidor flash
+    script(type="text/javascripts" src='/javascripts/mensajes_servidor.js')
+    // SOCKET.IO
+    script(src="https://cdn.socket.io/socket.io-1.3.7.js")
+    script.
+      var ip = '#{ip}';
+      var id_usuario = '#{id_usuario}';
+    // FUNCIONALIDADES SOCKET.IO
+    script(src="/javascripts/client-sockets.js")
+    // 
+    script.
+      $('.dropdown-toggle').dropdown();
