--- a/views/visor.jade
+++ b/views/visor.jade
@@ -1,20 +1,6 @@
-extends layout
+extends map-layout
 block script
 	script(src="https://cdn.socket.io/socket.io-1.3.7.js")
-	link(rel="stylesheet" href="/javascripts/openlayers/ol3/ol.css" type="text/css")
-	// OPENLAYERS 3.11.1 CSS
-	script(src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.12/proj4.js")
-	// PROJ4JS
-	script(src="/javascripts/openlayers/ol3/ol.js")
-	// OPENLAYERS 3.11.1 JS
-	link(rel="stylesheet" href="/javascripts/openlayers/ol3-layerswitcher/src/ol3-layerswitcher.css")
-	// OPENLAYERS LAYERSWITCHER CSS
-	script(src="/javascripts/openlayers/ol3-layerswitcher/src/ol3-layerswitcher.js")
-	// OPENLAYERS LAYERSWITCHER CSS
-	script(src="/javascripts/openlayers/style.js")
-	script(src="/javascripts/openlayers/proj.js")
-	script(src="/javascripts/openlayers/capas.js")
-	script(src="/javascripts/openlayers/olvisorapp.js")
 	script.
 		var denuncias = !{denuncias};
 	
@@ -26,7 +12,4 @@ block script
 		
 			vector.getSource().addFeature(wktFormat.readFeature(denuncia.wkt));
 		});
-				
-block content
-	div#map
-
+	script(src="/javascripts/openlayers/olvisorapp.js")
